Thu Nov 12 13:49:50 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rubygems: Update to RubyGems 2.5.0+ HEAD(db78980).
	  this version includes #1367 , #1373 , #1375
	* test/rubygems: ditto.

Thu Nov 12 10:53:41 2015  Eric Wong  <e@80x24.org>

	* benchmark/bm_io_nonblock_noex2.rb: new benchmark based
	  on bm_io_nonblock_noex.rb
	* io.c (io_read_nonblock): move documentation to prelude.rb
	  (io_write_nonblock): ditto
	  (Init_io): private, internal methods for prelude.rb use only
	* prelude.rb (IO#read_nonblock): wrapper + documentation
	  (IO#write_nonblock): ditto
	  [ruby-core:71439] [Feature #11339]

Wed Nov 11 18:30:28 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_str_format): look up the key, then get default
	  value and raise KeyError if the returned value is nil.
	  [ruby-dev:49338] [Ruby trunk - Bug #11677]

Wed Nov 11 17:38:24 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (local_var_list_add): skip internal local variable
	  name by its type but not if it has a name.  internal local
	  variable names are just unique per frame, not globally.
	  [ruby-core:71437] [Bug #11674]

Wed Nov 11 14:14:33 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* transcode.c: fix a typo
	[ci skip][fix GH-1091] Patch by @jwworth

Wed Nov 11 11:58:38 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (initialize): Connections are in passive mode per
	  default now.  The default mode can be changed by
	  Net::FTP.default_passive=.
	  [ruby-core:71146] [Feature #11612]

	* lib/net/ftp.rb (default_passive=, default_passive): new methods.

Wed Nov 11 09:03:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_str_format): respect default value of a hash.  no
	  longer raises KeyError unless the default value of the hash is
	  nil.  [ruby-core:71354] [Bug #11661]

Tue Nov 10 20:35:12 2015  Tanaka Akira  <akr@fsij.org>

	* lib/open-uri.rb: Remove indicator for "frozen_string_literal: true".

	* lib/pp.rb: Ditto.
